--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="assets/style.css" />
+    <script
+      src="https://kit.fontawesome.com/78c3f3ceba.js"
+      crossorigin="anonymous"
+    ></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -132,6 +136,7 @@
       <div class="socials">
         <i class="fa-brands fa-facebook"></i>
         <i class="fa-brands fa-google-plus"></i>
+        <i class="fa-brands fa-tumblr"></i>
       </div>
     </footer>
   </body>
