--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
       src="https://kit.fontawesome.com/78c3f3ceba.js"
       crossorigin="anonymous"
     ></script>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Archivo+Narrow&display=swap");
+    </style>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
