--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </div>
     </main>
     <footer>
-      <span>Design by ispace</span>
+      <p>Design by Ispace</p>
       <div class="socials">
         <i class="fa-brands fa-facebook"></i>
         <i class="fa-brands fa-google-plus"></i>
