--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script
       src="https://kit.fontawesome.com/78c3f3ceba.js"
       crossorigin="anonymous"
+      defer
     ></script>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Archivo+Narrow&display=swap");
